ant test_site target working

--- a/build.properties
+++ b/build.properties
@@ -108,7 +108,6 @@ core.coverage.test.class = org.solrmarc.AllTests
 
 # build.xml currently looks for 	<property file="${site.conf.props}" />
 #Property "site.conf.dir" has not been set
-#Property "site.lib.dir" has not been set
 #Property "site.test.lib.dir" has not been set
 
 
@@ -130,12 +129,12 @@ site.use_binary_request_handler = true
 site.use_streaming_proxy = true
 # FIXME: this should be redundant?
 site.use_solr_server_proxy = true
+site.solr.war.path = ${test.dir}/solr/war/apache-solr-3.6-2011-12-15_08-09-30.war
 
 site.jar.name = ${site.dirname}
 
-#site.solr.war.path = /home/blacklight/solr-war/solr.war
 # FIXME:  is there any point in keeping port separate?
-site.jetty.port = 8986
+site.jetty.port = 8983
 site.solr.url = http://localhost:${site.jetty.port}/solr
 
 #site.data.path = /data/sirsi/latest/updates
@@ -146,14 +145,13 @@ site.solr.url = http://localhost:${site.jetty.port}/solr
 site.test.dir = ${site.dirname}/test
 site.test.src.dir = ${site.test.dir}/src
 site.test.build.dir = ${site.build.dir}/${test.dir}
-#site.test.lib.dir = ${site.test.dir}/lib # there is no test lib dir for stanford sw
-site.test.lib.dir = ${site.test.dir}
+site.test.lib.dir = ${site.lib.dir}
 
-site.test.jetty.port = 8987
+site.test.jetty.port = 8986
 site.test.jetty.dir = ${test.jetty.dir}
 site.test.solr.run.dir = ${site.test.jetty.dir}/solr
 site.test.solr.data.dir = ${site.test.solr.run.dir}/data
-site.test.solr.orig.dir = ${core.test.solr.orig.dir}
+site.test.solr.orig.dir = ${site.dirname}/solr
 site.test.solr.url = http://localhost:${site.test.jetty.port}/solr
 
 site.test.config.file = ${site.config.file}
