--- a/build.properties
+++ b/build.properties
@@ -112,9 +112,6 @@ core.coverage.test.class = org.solrmarc.AllTests
 
 
 #--- SITE properties ---
-#site.basename = stanford
-#site.conf.dir = conf/${site.basename}
-#site.conf.props = ${site.conf.dir}/stanford_build.properties
 #solr.is.multicore = false
 
 site.dirname = stanford-sw
@@ -129,7 +126,7 @@ site.use_binary_request_handler = true
 site.use_streaming_proxy = true
 # FIXME: this should be redundant?
 site.use_solr_server_proxy = true
-site.solr.war.path = ${test.dir}/solr/war/apache-solr-3.6-2011-12-15_08-09-30.war
+site.solr.war.path = ${site.dirname}/solr/apache-solr-3.6-2011-12-15_08-09-30.war
 
 site.jar.name = ${site.dirname}
 
@@ -163,6 +160,54 @@ site.test.use_solr_server_proxy = ${site.use_solr_server_proxy}
 
 #site.test.class = edu.stanford.AllTests
 site.test.class = edu.stanford.AccessTests
+# author sort not passing.
+### site.test.class = edu.stanford.AuthorTests
+### site.test.class = edu.stanford.AuthorTitleMappingTests
+### site.test.class = edu.stanford.CallNumberTests
+### site.test.class = edu.stanford.CallNumLaneJacksonTests
+### site.test.class = edu.stanford.CallNumLCLoppingUnitTests
+### site.test.class = edu.stanford.CallNumLibLocComboLopTests
+### site.test.class = edu.stanford.CallNumLongestComnPfxTests
+### site.test.class = edu.stanford.CallNumLoppingUnitTests
+### site.test.class = edu.stanford.CallNumTopFacetTests
+### site.test.class = edu.stanford.CallNumUtilsLoppingUnitTests
+### site.test.class = edu.stanford.CombineMultBibsMhldsReaderTest
+### site.test.class = edu.stanford.DatabaseAZSubjectTests
+### site.test.class = edu.stanford.DiacriticTests
+### site.test.class = edu.stanford.FormatDatabaseTests
+### site.test.class = edu.stanford.FormatTests
+### site.test.class = edu.stanford.GeographicFacetTests
+### site.test.class = edu.stanford.IncrementalUpdateTests
+### site.test.class = edu.stanford.ItemDisplayCallnumLoppingTests
+### site.test.class = edu.stanford.ItemInfoTests
+### site.test.class = edu.stanford.ItemLACTests
+### site.test.class = edu.stanford.ItemMissingTests
+### site.test.class = edu.stanford.ItemNoCallNumberTests
+### site.test.class = edu.stanford.ItemObjectTests
+### site.test.class = edu.stanford.ItemOnlineTests
+### site.test.class = edu.stanford.ItemSkippedTests
+### site.test.class = edu.stanford.ItemsSplitTests
+### site.test.class = edu.stanford.ItemUtilsUnitTests
+### site.test.class = edu.stanford.LanguageTests
+### site.test.class = edu.stanford.MarcCombiningReaderTests
+### site.test.class = edu.stanford.MergeMhldFldsIntoBibsReaderTests
+### site.test.class = edu.stanford.MhldMappingTests
+### site.test.class = edu.stanford.MiscellaneousFieldTests
+### site.test.class = edu.stanford.NoteFieldsTests
+### site.test.class = edu.stanford.PhysicalTests
+### site.test.class = edu.stanford.PublicationTests
+### site.test.class = edu.stanford.SeriesTests
+### site.test.class = edu.stanford.StandardNumberTests
+### site.test.class = edu.stanford.SubjectSearchTests
+### site.test.class = edu.stanford.SubjectTests
+### site.test.class = edu.stanford.TitleSearchTests
+### site.test.class = edu.stanford.TitleSearchVernTests
+### site.test.class = edu.stanford.TitleTests
+### site.test.class = edu.stanford.UrlTests
+### site.test.class = edu.stanford.VernFieldsTests
+### site.test.class = edu.stanford.WordDelimiterTests
+
+
 
 # -- SITE Continuous Integration Properties
 site.instr.dir = ${instr.dir}/${site.dirname}
