take some cruft out of build.props

--- a/build.properties
+++ b/build.properties
@@ -158,55 +158,7 @@ site.test.use_binary_request_handler = ${site.use_binary_request_handler}
 site.test.use_streaming_proxy = ${site.use_streaming_proxy}
 site.test.use_solr_server_proxy = ${site.use_solr_server_proxy}
 
-#site.test.class = edu.stanford.AllTests
-site.test.class = edu.stanford.AccessTests
-# author sort not passing.
-### site.test.class = edu.stanford.AuthorTests
-### site.test.class = edu.stanford.AuthorTitleMappingTests
-### site.test.class = edu.stanford.CallNumberTests
-### site.test.class = edu.stanford.CallNumLaneJacksonTests
-### site.test.class = edu.stanford.CallNumLCLoppingUnitTests
-### site.test.class = edu.stanford.CallNumLibLocComboLopTests
-### site.test.class = edu.stanford.CallNumLongestComnPfxTests
-### site.test.class = edu.stanford.CallNumLoppingUnitTests
-### site.test.class = edu.stanford.CallNumTopFacetTests
-### site.test.class = edu.stanford.CallNumUtilsLoppingUnitTests
-### site.test.class = edu.stanford.CombineMultBibsMhldsReaderTest
-### site.test.class = edu.stanford.DatabaseAZSubjectTests
-### site.test.class = edu.stanford.DiacriticTests
-### site.test.class = edu.stanford.FormatDatabaseTests
-### site.test.class = edu.stanford.FormatTests
-### site.test.class = edu.stanford.GeographicFacetTests
-### site.test.class = edu.stanford.IncrementalUpdateTests
-### site.test.class = edu.stanford.ItemDisplayCallnumLoppingTests
-### site.test.class = edu.stanford.ItemInfoTests
-### site.test.class = edu.stanford.ItemLACTests
-### site.test.class = edu.stanford.ItemMissingTests
-### site.test.class = edu.stanford.ItemNoCallNumberTests
-### site.test.class = edu.stanford.ItemObjectTests
-### site.test.class = edu.stanford.ItemOnlineTests
-### site.test.class = edu.stanford.ItemSkippedTests
-### site.test.class = edu.stanford.ItemsSplitTests
-### site.test.class = edu.stanford.ItemUtilsUnitTests
-### site.test.class = edu.stanford.LanguageTests
-### site.test.class = edu.stanford.MarcCombiningReaderTests
-### site.test.class = edu.stanford.MergeMhldFldsIntoBibsReaderTests
-### site.test.class = edu.stanford.MhldMappingTests
-### site.test.class = edu.stanford.MiscellaneousFieldTests
-### site.test.class = edu.stanford.NoteFieldsTests
-### site.test.class = edu.stanford.PhysicalTests
-### site.test.class = edu.stanford.PublicationTests
-### site.test.class = edu.stanford.SeriesTests
-### site.test.class = edu.stanford.StandardNumberTests
-### site.test.class = edu.stanford.SubjectSearchTests
-### site.test.class = edu.stanford.SubjectTests
-### site.test.class = edu.stanford.TitleSearchTests
-### site.test.class = edu.stanford.TitleSearchVernTests
-### site.test.class = edu.stanford.TitleTests
-### site.test.class = edu.stanford.UrlTests
-### site.test.class = edu.stanford.VernFieldsTests
-### site.test.class = edu.stanford.WordDelimiterTests
-
+site.test.class = edu.stanford.AllTests
 
 
 # -- SITE Continuous Integration Properties
