--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,7 @@
 	<!-- Continuous Integration properties -->
 	<property name="cobertura.jar.dir" location="${test.lib.dir}/cobertura-1.9.4.1" />
 	<property name="cobertura.core.data.file" value="${core.instr.dir}/cobertura.ser" />
+	<property name="cobertura.site.data.file" value="${site.instr.dir}/cobertura.ser" />
 
 	<!-- SITE properties, in case they aren't already defined -->
 	<property name="site.map.dir" location="${site.conf.dir}/${trans.map.dir}" />
@@ -370,9 +371,8 @@
 			<test name="${site.test.class}" />
 		</junit>
 	</target>
-	
-	
-	
+
+		
 	<!-- NOTE:  this should be used only after a fresh SITE compile -->
 	<target name="instrument_site">
 		<delete dir="${site.instr.dir}" />
@@ -411,11 +411,11 @@
     	<sysproperty key="solrmarc.use_streaming_proxy" value="${site.test.use_streaming_proxy}" />
 			<sysproperty key="test.solr.log.level" value="${test.solr.log.level}" />
 			<sysproperty key="test.solrmarc.log.level" value="${test.solrmarc.log.level}" />
-			<sysproperty key="test.jetty.port" value="${test.jetty.port}" />
-			<sysproperty key="test.jetty.dir" value="${test.jetty.dir}" />
-    	<sysproperty key="test.solr.url" value="${test.solr.url}" />
+			<sysproperty key="test.jetty.port" value="${site.test.jetty.port}" />
+			<sysproperty key="test.jetty.dir" value="${site.test.jetty.dir}" />
+    	<sysproperty key="test.solr.url" value="${site.test.solr.url}" />
 			<sysproperty key="test.solr.path" value="${site.test.solr.run.dir}" />
-			<sysproperty key="solr.data.dir" value="${test.solr.data.dir}" />
+			<sysproperty key="solr.data.dir" value="${site.test.solr.data.dir}" />
 			<sysproperty key="solr.path" value="${site.test.solr.run.dir}" />
     	
 			<test name="${site.coverage.test.class}" />
@@ -426,231 +426,8 @@
 		<cobertura-report format="html" destdir="${site.coverage.dir}" srcdir="${site.src.dir}" datafile="${cobertura.site.data.file}"/>
 	</target>
 	
-	
-	
-	
 	<target name="test_clean" depends="test_clean_site,test_clean_core" description="remove the directories generated for CORE and SITE testing" />
 	
-	
-
-	
-	
-	
-	
-	<!-- SITE TEST properties, in case they aren't already defined -->
-	<property name="site.test.solr.dir" location="${site.test.basedir}/solr" />
-		
-
-	
-
-	
-
-	<target name="testJar" depends="build_core,test_compile_core" if="test.has.source" description="jar up test class files">
-		<echo message=" creating test jar :  ${site.test.build.dir}/${site.test.jar}" />
-		<jar destfile="${site.test.build.dir}/${site.test.jar}" >
-			<fileset dir="${site.test.build.dir}" includes="**/*.class" />
-		</jar>
-	</target>
-
-	<!-- instrument custom classes only -->
-	<target name="instrument-custom" depends="clean,dist" description="instrument custom (local) classes only for coverage reports">
-		<delete dir="${cobertura.instr.dir}" />
-		<mkdir dir="${cobertura.instr.dir}" />
-		<cobertura-instrument todir="${cobertura.instr.dir}">
-			<fileset dir="${site.build.dir}">
-				<include name="**/*.class" />
-				<exclude name="**/*Test*" />
-			</fileset>
-		</cobertura-instrument>
-	</target>
-
-	<!-- instrument both custom and solrmarc core classes -->
-	<target name="instrument-all" depends="instrument-custom" description="instrument both custom (local) and solrmarc core classes for coverage reports">
-		<!-- get freshly compiled solrmarc core classes -->
-		<ant dir="../${lib.dir}/solrmarc" target="compile_core" inheritAll="false" />
-		<cobertura-instrument todir="${cobertura.instr.dir}">
-			<fileset dir="../${lib.dir}/solrmarc/${build.dir}">
-				<include name="**/*.class" />
-				<exclude name="**/*Test*" />
-			</fileset>
-		</cobertura-instrument>
-	</target>
-
-	<!-- private target to run junit test with Cobertura code coverage. Coverage stats depend on contents of instrumented class directory -->
-	<target name="run-instrumented-test">
-		<echo message="solr.path: ${solr.path}" />
-		<echo message="solr.path being used for testing: ${site.test.solr.dir}" />
-		<property name="solr.jar.file.dir" value="${site.test.dir}/tmp_solr_war_jars" />
-
-		<get_jars_from_solr_war src="${jetty.install.dir}/webapps/solr.war" todir="${solr.jar.file.dir}" />
-		<get_jars_from_solrmarc_onejar junit="test/*.jar"  todir="${site.test.dir}/tmp_solrmarc_jars" />
-
-		<mkdir dir="${cobertura.coverage.dir}"/>
-
-		<path id="instrumented.classpath">
-			<pathelement location="${cobertura.instr.dir}" />
-			<fileset file="${site.test.build.dir}/${site.test.jar}" />
-			<pathelement location="${dist.path}" />
-			<!-- has _config.properties file -->
-			<fileset dir="${site.test.dir}/tmp_solrmarc_jars" includes="*.jar" />
-			<!-- has junit jar -->
-			<fileset dir="${solr.jar.file.dir}" includes="*.jar" />
-			<path refid="cobertura.classpath" />
-		</path>
-
-		<echo message="test class = ${test.class} " />
-
-		<junit showoutput="yes" printsummary="yes" fork="yes">
-			<formatter type="xml" />
-
-			<classpath refid="instrumented.classpath" />
-
-			<!-- name of the coverage data file to use.  It must be the same
-                as the coverage data file generated during instrumentation. -->
-			<sysproperty key="net.sourceforge.cobertura.datafile"
-                file="cobertura.ser" />
-
-			<sysproperty key="test.data.path" path="${test.data.dir}" />
-			<sysproperty key="test.data.file" value="${test.data.file}" />
-			<sysproperty key="test.config.dir" path="${dist.path}" />
-			<sysproperty key="test.config.file" value="${default.config}" />
-			<sysproperty key="solr.path" path="${site.test.solr.dir}" />
-			<sysproperty key="solr.data.dir" path="${site.test.solr.dir}/data" />
-			<sysproperty key="test.solr.verbose" value="${test.solr.verbose}" />
-			<test name="${test.class}" />
-		</junit>
-
-		<cobertura-report format="xml" destdir="${cobertura.coverage.dir}" srcdir="${site.src.dir}" />
-		<cobertura-report format="html" destdir="${cobertura.coverage.dir}" srcdir="${site.src.dir}" />
-
-		<!--  Now delete the jar files that had to be un-jarred from the solr.war file for the test to run -->
-		<delete dir="${solr.jar.file.dir}" deleteonexit="true" quiet="true" />
-		<delete dir="${site.test.dir}/tmp_solrmarc_jars" deleteonexit="true" quiet="true" />
-	</target>
-
-	<target name="test-custom-coverage" depends="instrument-custom,testJar,run-instrumented-test" description="run junittest with code coverage for custom code only" />
-
-	<target name="test-all-coverage" depends="instrument-all,testJar,run-instrumented-test" description="run junittest with code coverage for custom and core solrmarc code" />
-
-
-
-	<!-- macros to handle the bulk of the work for the targets defined above   -->
-
-
-	<!-- macro to copy SolrMarc.jar from lib directory to dist directory and set the default config to use at the same time -->
-	<macrodef name="copy_solrmarc_set_default_config" >
-		<attribute name="config" />
-		<attribute name="todir" />
-		<sequential>
-			<java jar="${site.lib.dir}/${solrmarc.core.one-jar.name}" fork="true" >
-				<jvmarg value="-Dsolrmarc.main.class=org.solrmarc.tools.PropertyFileFetcher" />
-				<arg value="JarUtils.jar" />
-				<arg value="${site.build.dir}" />
-			</java>
-			<java classpath="${site.build.dir}/JarUtils.jar" classname="JarUpdate" fork="true" >
-				<arg value="${site.lib.dir}/${solrmarc.core.one-jar.name}" />
-				<arg value="META-INF/MANIFEST.MF" />
-				<arg value="Default-Config-File: @{config}" />
-				<arg value="@{todir}/${solrmarc.core.one-jar.name}" />
-			</java>
-			<delete file="${site.build.dir}/JarUtils.jar" />
-		</sequential>
-	</macrodef>
-
-	<macrodef name="copy_scripts" description="Copy scripts or batch files from script_templates directory to the dist directory">
-		<sequential>
-			<if>
-				<or>
-					<os family="windows" />
-					<equals arg1="${package-prebuilt.allscripts.batch}" arg2="true"/>
-				</or>
-				<then>
-					<mkdir dir="${dist.exe.path}" />
-					<copy todir="${dist.exe.path}" overwrite="true">
-						<fileset dir="${site.script.template.dir}" includes="*.bat" />
-						<filterchain>
-							<fixcrlf eol="dos"/>
-						</filterchain>
-						<filterset>
-							<filter token="DEFAULT_CONFIG_FILE" value="${default.config}" />
-							<filter token="MEM_ARGS" value="${exe.mem.args}" />
-						</filterset>
-					</copy>
-				</then>
-			</if>
-			<if>
-				<or>
-					<not>
-						<os family="windows" />
-					</not>
-					<equals arg1="${package-prebuilt.allscripts.shell}" arg2="true"/>
-				</or>
-				<then>
-					<mkdir dir="${dist.exe.path}" />
-					<copy todir="${dist.exe.path}" overwrite="true">
-						<fileset dir="${site.script.template.dir}" includes="*" excludes="*.bat" />
-						<filterchain>
-							<fixcrlf eol="unix"/>
-						</filterchain>
-						<filterset>
-							<filter token="DEFAULT_CONFIG_FILE" value="${default.config}" />
-							<filter token="MEM_ARGS" value="${exe.mem.args}" />
-						</filterset>
-					</copy>
-
-					<chmod perm="u+x">
-						<fileset dir="${dist.exe.path}" excludes="*.jar,*.bat,*.properties,*.log" />
-					</chmod>
-				</then>
-			</if>
-		</sequential>
-	</macrodef>
-
-	<macrodef name="copy_libs_set_property" description="Copy jar files in the local_build/lib directory to the dist/lib directory, and modify solrmarc.custom.jar.path in config file" >
-		<sequential>
-			<if >
-				<resourcecount when="gt" count="0">
-					<fileset id="local_lib_jars" dir="${site.lib.dir}" includes="*.jar" excludes="SolrMarc.jar" />
-				</resourcecount>
-				<then>
-					<mkdir dir="${dist.path}/lib" />
-					<copy todir="${dist.path}/lib" >
-						<fileset refid="local_lib_jars" />
-					</copy>
-					<if >
-						<length string="${custom.jar.name.jar}" when="gt" length="0" />
-						<then>
-							<property name="add.lib.to.custom.jar.line" value="|lib" />
-						</then>
-						<else>
-							<property name="add.lib.to.custom.jar.line" value="lib" />
-						</else>
-					</if >
-				</then>
-				<else>
-					<property name="add.lib.to.custom.jar.line" value="" />
-				</else>
-			</if>
-		</sequential>
-	</macrodef>
-
-
-	<!-- macro to unbundle all of the necessary jars from the SolrMarc One-Jar so they can be used by junit tests -->
-	<macrodef name="get_jars_from_solrmarc_onejar" >
-		<attribute name="junit" default="lib/*.jar" />
-		<attribute name="todir" />
-		<sequential>
-			<mkdir dir="@{todir}" />
-			<unwar src="${site.lib.dir}/SolrMarc.jar" dest="@{todir}" >
-				<patternset>
-					<include name="main/*.jar"/>
-					<include name="lib/*.jar"/>
-					<include name="@{junit}"/>
-				</patternset>
-				<flattenmapper />
-			</unwar>
-		</sequential>
-	</macrodef>	
 	
 	<target name="clean_all" depends="test_clean, clean" description="remove all build, test and dist generated directories">
 		<delete dir="${dist.dir}" quiet="true" />
