have javadoc_core task working

--- a/build.properties
+++ b/build.properties
@@ -65,6 +65,7 @@ test.solr.data.dir = ${test.solr.run.dir}/data
 ci.dir = ci
 coverage.dir = ${ci.dir}/coverage
 instr.dir = ${ci.dir}/instr
+javadoc.dir = ${ci.dir}/docs
 
 #-------- END GENERAL properties ----------
 
@@ -100,6 +101,7 @@ core.solr.war.path = ${core.test.solr.orig.dir}/war/apache-solr-3.6-2011-12-15_0
 core.instr.dir = ${instr.dir}/core
 core.coverage.dir = ${coverage.dir}/core
 core.coverage.test.class = org.solrmarc.AllTests
+core.javadoc.dir = ${javadoc.dir}/core
 
 #-------- END CORE properties ----------
 
@@ -159,6 +161,19 @@ site.test.use_streaming_proxy = ${site.use_streaming_proxy}
 site.test.use_solr_server_proxy = ${site.use_solr_server_proxy}
 
 site.test.class = edu.stanford.AllTests
+#site.test.class = edu.stanford.AuthorTests  #// problem with sorting
+#site.test.class = edu.stanford.CallNumLaneJacksonTests # // bad values
+#site.test.class = edu.stanford.CallNumLongestComnPfxTests  #// bad values one test using dewey instead of LC?
+#site.test.class = edu.stanford.CallNumTopFacetTests  #// bad values
+#site.test.class = edu.stanford.CombineMultBibsMhldsReaderTest   #// unreadable rec between isn't working right
+#site.test.class = edu.stanford.ItemDisplayCallnumLoppingTests   #//bad value for one test
+#site.test.class = edu.stanford.ItemInfoTests  # // bad value for one test
+#site.test.class = edu.stanford.ItemObjectTests   # // bad value for one test
+#site.test.class = edu.stanford.MhldMappingTests  # // probs
+#site.test.class = edu.stanford.MiscellaneousFieldTests   # // I think it should be using Combine... reader, not MarcCombining reader
+#site.test.class = edu.stanford.NoteFieldsTests    # // one test  bad value
+#site.test.class = edu.stanford.PublicationTests     # // bad sorts, etc.
+#site.test.class = edu.stanford.SubjectTests    # // bad val counts one test
 
 
 # -- SITE Continuous Integration Properties
