added ci_site ant target that generates site javadoc and site coverage data

--- a/build.properties
+++ b/build.properties
@@ -180,5 +180,6 @@ site.test.class = edu.stanford.AllTests
 site.instr.dir = ${instr.dir}/${site.dirname}
 site.coverage.dir = ${coverage.dir}/${site.dirname}
 site.coverage.test.class = edu.stanford.AllTests
+site.javadoc.dir = ${javadoc.dir}/${site.dirname}
 
 #-------- END SITE properties ----------
