--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
 	<property name="cobertura.site.data.file" value="${site.instr.dir}/cobertura.ser" />
 
 
-<!-- ******* CORE basic build targets ********** -->
+<!-- ******* CORE non-test targets ********** -->
 	
 	<target name="clean_core" description="remove the build directories for CORE">
 		<delete dir="${core.build.dir}" />
@@ -48,91 +48,6 @@
 			<fileset file="${log4j.props}" />
 		</jar>
 	</target>
-
-	
-<!-- ******* SITE basic build targets ********** -->
-	
-	<target name="clean_site" description="remove the build directories for SITE">
-		<delete dir="${site.build.dir}" />
-	</target>
-		
-	<target name="init_site" depends="init_core" description="create (empty) generated directories for site AND core code">
-		<mkdir dir="${site.build.dir}" />
-	</target>
-
-	<path id="site.classpath" description="classes and jars needed to build SITE code">
-		<fileset dir="${site.lib.dir}">
-			<include name="*.jar" />
-		</fileset>
-		<pathelement location="${core.build.dir}"/>
-		<path refid="core.classpath" />
-	</path>
-	
-	<target name="compile_site" depends="compile_core,init_site" description="Compile SITE AND CORE source code into the build directory">
-		<javac destdir="${site.build.dir}" srcdir="${site.src.dir}" 
-                target="${java.compat.version}" 
-                source="${java.compat.version}" 
-                debug="true" debuglevel="lines,vars,source" 
-                encoding="utf-8" includeAntRuntime="false">
-			<include name="**/*.java" />
-			<classpath refid="site.classpath" />
-		</javac>
-	</target>
-	
-	<target name="build_site" depends="build_core,compile_site" description="Build custom jar file containing SITE code" >
-		<jar destfile="${site.build.dir}/${site.jar.name}.jar">
-			<fileset dir="${site.build.dir}" includes="**/*.class" />
-			<fileset file="${log4j.props}" />
-			<fileset file="${core.build.dir}/${core.jar.name}.jar" />
-		</jar>
-	</target>
-
-	
-<!-- ******* CORE and SITE together targets ********** -->
-	
-<!-- FIXME:  dist.path not defined -->	
-	
-	<target name="dist" depends="build_core" unless="dist.already.run"
-             description="Copy necessary files to the dist directory, to make a runnable instance of SolrMarc">
-		<mkdir dir="${dist.path}" />
-		<copy todir="${dist.path}" >
-			<fileset dir="${site.base.dir}" includes="${trans.map.dir}/**,${scripts.dir}/**" />
-		</copy>
-		<copy_solrmarc_set_default_config config="${default.config}" todir="${dist.path}" />
-		<copy todir="${dist.path}" >
-			<flattenmapper/>
-			<fileset dir="${site.build.dir}" includes="*.jar" />
-			<fileset dir="${site.base.dir}" includes="*_index.properties,marc*.properties" />
-		</copy>
-		<if >
-			<available file="${site.build.dir}/${custom.jar.name}.jar" />
-			<then>
-				<property name="custom.jar.name.jar" value="${custom.jar.name}.jar" />
-			</then>
-			<else>
-				<property name="custom.jar.name.jar" value="" />
-			</else>
-		</if>
-		<copy_libs_set_property />
-		<copy todir="${dist.path}" overwrite="true" >
-			<fileset dir="${site.base.dir}" includes="*_config.properties,import.properties" />
-			<filterchain>
-				<expandproperties />
-				<tokenfilter>
-					<replaceregex pattern="(solrmarc[.]custom[.]jar[.]path=.*)" replace="\1${add.lib.to.custom.jar.line}" />
-				</tokenfilter>
-				<fixcrlf />
-			</filterchain>
-		</copy>
-
-		<copy_scripts />
-		<copy_jetty />
-		<copy_solr />
-		<property name="dist.already.run" value="true" />
-	</target>
-	
-	<target name="clean" depends="clean_site,clean_core" description="remove the build directories for CORE and SITE" />
-	
 
 	
 <!-- ******* CORE TEST targets ********** -->
@@ -286,6 +201,78 @@
 		<cobertura-report format="xml" destdir="${core.coverage.dir}" srcdir="${core.src.dir}" datafile="${cobertura.core.data.file}"/>
 		<cobertura-report format="html" destdir="${core.coverage.dir}" srcdir="$core.src.dir}" datafile="${cobertura.core.data.file}"/>
 	</target>
+	
+	
+<!-- ******* CORE continuous integration targets ********** -->
+	
+	<target name="javadoc_core" description="generate javadoc for CORE code">
+		<path id="core.docs.srcpath">
+			<pathelement location="${core.src.dir}"/>
+			<pathelement location="${core.test.src.dir}"/>
+		</path>
+
+		<javadoc
+							destdir="${core.javadoc.dir}"
+							sourcepathref="core.docs.srcpath"
+							classpathref="test.core.build.classpath"
+							author="true"
+							version="true"
+							use="true"
+							windowtitle="SolrMarc CORE from Stanford Fork"
+			>
+		    <doctitle><![CDATA[<h1>SolrMarc CORE API (from Stanford Fork)</h1>]]></doctitle>
+				<package name="org.solrmarc.*" />
+	    	<group title="Core Packages" packages="org.solrmarc.index,org.solrmarc.marc,org.solrmarc.marcoverride,org.solrmarc.solr,org.solrmarc.tools"/>
+		    <group title="Test Utility Classes" packages="org.solrmarc.testUtils*"/>
+	    	<group title="Core Test Classes" packages="org.solrmarc.A*,org.solrmarc.tools.*Test*"/>
+	    	<link href="http://docs.oracle.com/javase/6/docs/api/" />
+				<link href="http://marc4j.tigris.org/doc/apidoc" />
+				<link href="http://logging.apache.org/log4j/1.2/apidocs" />
+				<link href="http://www.beanshell.org/javadoc" />
+				<link href="http://lucene.apache.org/solr/api" />
+		  </javadoc>
+	</target>
+
+	<target name="ci_core" depends="javadoc_core,test_core_coverage" description="CORE Continuous Integration: javadoc and tests with coverage" />
+	
+
+
+<!-- ******* SITE basic build targets ********** -->
+	
+	<target name="clean_site" description="remove the build directories for SITE">
+		<delete dir="${site.build.dir}" />
+	</target>
+		
+	<target name="init_site" depends="init_core" description="create (empty) generated directories for site AND core code">
+		<mkdir dir="${site.build.dir}" />
+	</target>
+
+	<path id="site.classpath" description="classes and jars needed to build SITE code">
+		<fileset dir="${site.lib.dir}">
+			<include name="*.jar" />
+		</fileset>
+		<pathelement location="${core.build.dir}"/>
+		<path refid="core.classpath" />
+	</path>
+	
+	<target name="compile_site" depends="compile_core,init_site" description="Compile SITE AND CORE source code into the build directory">
+		<javac destdir="${site.build.dir}" srcdir="${site.src.dir}" 
+                target="${java.compat.version}" 
+                source="${java.compat.version}" 
+                debug="true" debuglevel="lines,vars,source" 
+                encoding="utf-8" includeAntRuntime="false">
+			<include name="**/*.java" />
+			<classpath refid="site.classpath" />
+		</javac>
+	</target>
+	
+	<target name="build_site" depends="build_core,compile_site" description="Build custom jar file containing SITE code" >
+		<jar destfile="${site.build.dir}/${site.jar.name}.jar">
+			<fileset dir="${site.build.dir}" includes="**/*.class" />
+			<fileset file="${log4j.props}" />
+			<fileset file="${core.build.dir}/${core.jar.name}.jar" />
+		</jar>
+	</target>
 
 	
 <!-- ******* SITE TEST targets ********** -->
@@ -424,38 +411,82 @@
 		<cobertura-report format="html" destdir="${site.coverage.dir}" srcdir="${site.src.dir}" datafile="${cobertura.site.data.file}"/>
 	</target>
 	
-	<target name="test_clean" depends="test_clean_site,test_clean_core" description="remove the directories generated for CORE and SITE testing" />
 	
-	<target name="javadoc_core" description="generate javadoc for CORE code">
-		<path id="core.docs.srcpath">
-			<pathelement location="${core.src.dir}"/>
-			<pathelement location="${core.test.src.dir}"/>
+<!-- ******* SITE continuous integration targets ********** -->
+	
+	<target name="javadoc_site" description="generate javadoc for SITE code">
+		<path id="site.docs.srcpath">
+			<pathelement location="${site.src.dir}"/>
 		</path>
 
 		<javadoc
-							destdir="${core.javadoc.dir}"
-							sourcepathref="core.docs.srcpath"
-							classpathref="test.core.build.classpath"
+							destdir="${site.javadoc.dir}"
+							sourcepathref="site.docs.srcpath"
+							classpathref="test.site.build.classpath"
 							author="true"
 							version="true"
 							use="true"
-							windowtitle="SolrMarc CORE from Stanford Fork"
+							windowtitle="SearchWorks SITE from Stanford SolrMarc Fork"
 			>
-		    <doctitle><![CDATA[<h1>SolrMarc CORE API (from Stanford Fork)</h1>]]></doctitle>
-				<package name="org.solrmarc.*" />
-	    	<group title="Core Packages" packages="org.solrmarc.index,org.solrmarc.marc,org.solrmarc.marcoverride,org.solrmarc.solr,org.solrmarc.tools"/>
-		    <group title="Test Utility Classes" packages="org.solrmarc.testUtils*"/>
-	    	<group title="Core Test Classes" packages="org.solrmarc.A*,org.solrmarc.tools.*Test*"/>
+		    <doctitle><![CDATA[<h1>SolrMarc SearchWorks SITE API (from Stanford Fork)</h1>]]></doctitle>
+				<package name="edu.stanford.*" />
+	    	<group title="Stanford SearchWorks Packages" packages="edu.stanford,edu.stanford.enumValues,edu.stanford.marcUtils"/>
 	    	<link href="http://docs.oracle.com/javase/6/docs/api/" />
 				<link href="http://marc4j.tigris.org/doc/apidoc" />
 				<link href="http://logging.apache.org/log4j/1.2/apidocs" />
-				<link href="http://www.beanshell.org/javadoc" />
 				<link href="http://lucene.apache.org/solr/api" />
 		  </javadoc>
 	</target>
+	
+	<target name="ci_site" depends="javadoc_site,test_site_coverage" description="SITE Continuous Integration: javadoc and tests with coverage" />
+	
+	
+<!-- ******* CORE and SITE together targets ********** -->
+	
+<!-- FIXME:  dist.path not defined -->	
+	
+	<target name="dist" depends="build_core" unless="dist.already.run"
+             description="Copy necessary files to the dist directory, to make a runnable instance of SolrMarc">
+		<mkdir dir="${dist.path}" />
+		<copy todir="${dist.path}" >
+			<fileset dir="${site.base.dir}" includes="${trans.map.dir}/**,${scripts.dir}/**" />
+		</copy>
+		<copy_solrmarc_set_default_config config="${default.config}" todir="${dist.path}" />
+		<copy todir="${dist.path}" >
+			<flattenmapper/>
+			<fileset dir="${site.build.dir}" includes="*.jar" />
+			<fileset dir="${site.base.dir}" includes="*_index.properties,marc*.properties" />
+		</copy>
+		<if >
+			<available file="${site.build.dir}/${custom.jar.name}.jar" />
+			<then>
+				<property name="custom.jar.name.jar" value="${custom.jar.name}.jar" />
+			</then>
+			<else>
+				<property name="custom.jar.name.jar" value="" />
+			</else>
+		</if>
+		<copy_libs_set_property />
+		<copy todir="${dist.path}" overwrite="true" >
+			<fileset dir="${site.base.dir}" includes="*_config.properties,import.properties" />
+			<filterchain>
+				<expandproperties />
+				<tokenfilter>
+					<replaceregex pattern="(solrmarc[.]custom[.]jar[.]path=.*)" replace="\1${add.lib.to.custom.jar.line}" />
+				</tokenfilter>
+				<fixcrlf />
+			</filterchain>
+		</copy>
 
-	<target name="javadoc_site" description="generate javadoc for SITE code">
+		<copy_scripts />
+		<copy_jetty />
+		<copy_solr />
+		<property name="dist.already.run" value="true" />
 	</target>
+	
+	<target name="clean" depends="clean_site,clean_core" description="remove the build directories for CORE and SITE" />
+
+	<target name="test_clean" depends="test_clean_site,test_clean_core" description="remove the directories generated for CORE and SITE testing" />
 	
 	<target name="clean_all" depends="test_clean, clean" description="remove all generated directories for CORE and SITE, including test and dist">
 		<delete dir="${dist.dir}" quiet="true" />
