tighten up code for system properties required for testing

--- a/build.properties
+++ b/build.properties
@@ -166,14 +166,18 @@ site.test.class = edu.stanford.AllTests
 #site.test.class = edu.stanford.CallNumLongestComnPfxTests  #// bad values one test using dewey instead of LC?
 #site.test.class = edu.stanford.CallNumTopFacetTests  #// bad values
 #site.test.class = edu.stanford.CombineMultBibsMhldsReaderTest   #// unreadable rec between isn't working right
+#site.test.class = edu.stanford.CombineMultBibsMhldsReaderTest
 #site.test.class = edu.stanford.ItemDisplayCallnumLoppingTests   #//bad value for one test
 #site.test.class = edu.stanford.ItemInfoTests  # // bad value for one test
+#site.test.class = edu.stanford.ItemInfoTests
 #site.test.class = edu.stanford.ItemObjectTests   # // bad value for one test
 #site.test.class = edu.stanford.MhldMappingTests  # // probs
 #site.test.class = edu.stanford.MiscellaneousFieldTests   # // I think it should be using Combine... reader, not MarcCombining reader
 #site.test.class = edu.stanford.NoteFieldsTests    # // one test  bad value
+#site.test.class = edu.stanford.NoteFieldsTests
 #site.test.class = edu.stanford.PublicationTests     # // bad sorts, etc.
 #site.test.class = edu.stanford.SubjectTests    # // bad val counts one test
+#site.test.class = edu.stanford.SubjectTests
 
 
 # -- SITE Continuous Integration Properties
