stanford MiscFields and NoteFields tests pass

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-# TOP LEVEL SolrMarc properties file
+# SolrMarc properties file for Ant build.xml script
 
 #-------- GENERAL properties ----------
 java.compat.version = 1.5
@@ -78,6 +78,7 @@ core.build.dir = ${build.dir}/core
 
 
 # --- CORE TEST properties ---
+
 core.test.dir = ${test.dir}/core
 core.test.src.dir = ${core.test.dir}/src
 core.test.build.dir = ${core.build.dir}/${test.dir}
@@ -108,12 +109,6 @@ core.javadoc.dir = ${javadoc.dir}/core
 
 #-------- SITE properties ----------
 
-# build.xml currently looks for 	<property file="${site.conf.props}" />
-#Property "site.conf.dir" has not been set
-#Property "site.test.lib.dir" has not been set
-
-
-#--- SITE properties ---
 #solr.is.multicore = false
 
 site.dirname = stanford-sw
@@ -161,24 +156,6 @@ site.test.use_streaming_proxy = ${site.use_streaming_proxy}
 site.test.use_solr_server_proxy = ${site.use_solr_server_proxy}
 
 site.test.class = edu.stanford.AllTests
-#site.test.class = edu.stanford.AuthorTests  #// problem with sorting
-#site.test.class = edu.stanford.CallNumLaneJacksonTests # // bad values
-#site.test.class = edu.stanford.CallNumLongestComnPfxTests  #// bad values one test using dewey instead of LC?
-#site.test.class = edu.stanford.CallNumTopFacetTests  #// bad values
-#site.test.class = edu.stanford.CombineMultBibsMhldsReaderTest   #// unreadable rec between isn't working right
-#site.test.class = edu.stanford.CombineMultBibsMhldsReaderTest
-#site.test.class = edu.stanford.ItemDisplayCallnumLoppingTests   #//bad value for one test
-#site.test.class = edu.stanford.ItemInfoTests  # // bad value for one test
-#site.test.class = edu.stanford.ItemInfoTests
-#site.test.class = edu.stanford.ItemObjectTests   # // bad value for one test
-#site.test.class = edu.stanford.MhldMappingTests  # // probs
-#site.test.class = edu.stanford.MiscellaneousFieldTests   # // I think it should be using Combine... reader, not MarcCombining reader
-#site.test.class = edu.stanford.NoteFieldsTests    # // one test  bad value
-#site.test.class = edu.stanford.NoteFieldsTests
-#site.test.class = edu.stanford.PublicationTests     # // bad sorts, etc.
-#site.test.class = edu.stanford.SubjectTests    # // bad val counts one test
-#site.test.class = edu.stanford.SubjectTests
-
 
 # -- SITE Continuous Integration Properties
 site.instr.dir = ${instr.dir}/${site.dirname}
