use MarcFactoryImpl now that marc4j version doesn't sort fields

--- a/stanford-sw/sw_config.properties
+++ b/stanford-sw/sw_config.properties
@@ -24,7 +24,7 @@ solr.indexer = edu.stanford.StanfordIndexer
 # - marc.override - optional (?) class used to provide RecordImpl object that 
 #  overrides marc4j RecordImpl.  Useful when changes are needed from marc4j 
 #  code
-#marc.override = org.solrmarc.marcoverride.NoSortMarcFactoryImpl 
+#marc.override = org.marc4j.marc.impl.MarcFactoryImpl
 # - marc.permissive - if true, try to recover from errors, including records
 #  with errors, when possible
 marc.permissive = true
